# evbtest

./: .gitignore  README.md  pyproject.toml
configs/: devices.yaml
docs/: development-flow.md
evbtest/: __init__.py  __main__.py  cli.py
evbtest/api/: __init__.py  device.py  testcase.py
evbtest/config/: __init__.py  loader.py  schema.py
evbtest/connection/: __init__.py  base.py  exceptions.py  output_buffer.py  serial_tcp.py  ssh.py
evbtest/execution/: __init__.py  executor.py  sequence.py
evbtest/reporting/: __init__.py  logger.py  result.py
evbtest/runner/: __init__.py  parallel.py  python_runner.py  yaml_runner.py
skills/evbtest/: SKILL.md
skills/evbtest/reference/: device-config.md  python-tests.md  scenarios.md  yaml-tests.md
testcases/python/: example_flash_verify.py
testcases/yaml/: connectivity_test.yaml  example_driver_test.yaml  example_uboot_flash.yaml  system_info_test.yaml
